src/_sass/layouts/_page.scss
.page-content {
  padding-bottom: 4rem;

  h1 {
    color: $brown;
    font-weight: $fw-bold;
    margin-bottom: 1.5rem;
    padding: 1rem 0;
    position: relative;
    text-align: center;

    @include text(xl);

    &::before {
      background-color: $red;
      bottom: 0;
      content: "";
      height: 0.125rem;
      left: 50%;
      position: absolute;
      transform: translateX(-50%);
      width: 4rem;
    }
  }

  h2 {
    color: $brown;
    font-weight: $fw-bold;
    margin-bottom: 1.5rem;
    padding: 1rem 0;
    position: relative;
    text-align: center;

    @include text(xl);

    &::before {
      background-color: $red;
      bottom: 0;
      content: "";
      height: 0.125rem;
      left: 50%;
      position: absolute;
      transform: translateX(-50%);
      width: 4rem;
    }
  }

  h3,
  h4,
  h5 {
    max-width: $wrapper-small;
    padding: 1rem 0;
    position: relative;
  }

  h4,
  h5 {
    color: $brown80;
    text-transform: uppercase;
  }

  h3 {
    color: $brown;
    font-weight: $fw-semibold;
    margin-bottom: 0.5rem;

    @include text(lg);
  }

  h4 {
    font-weight: $fw-semibold;

    @include text(sm);
  }

  h5 {
    font-weight: $fw-bold;

    @include text(xs);
  }

  img,
  video {
    display: block;
    margin: 0 auto;
    max-width: $wrapper-media;
    width: 100%;

    &.not-expanded {
      width: auto;
    }
  }

  video {
    width: 100%;
  }

  p {
    color: $brown;

    @include text(lg, "text");

    * {
      font-family: $font-text;
    }

    strong {
      font-weight: $fw-bold;
    }

    em {
      font-style: italic;
    }
  }

  a {
    &:hover {
      text-decoration: none;
    }
  }

  .sidebar-contents {
    @include flex-container($justify: flex-start, $align: flex-start);
  }

  .sidebar-contents__table {
    background-color: $beige-light;
    border: $border;
    flex-basis: 11rem;
    flex-shrink: 0;
    margin-right: 1rem;
    margin-top: 2rem;
    padding: 0.5rem;
    position: sticky;
    top: 50px;
    overflow-y: auto;
    max-height: calc(
      100vh - 50px - 10px
    ); // the extra 10px is to allow a little space at the bottom

    @media #{$desktop-up} {
      flex-basis: 14rem;
    }

    h4 {
      color: $brown;
      padding: 0.5rem;
    }
  }

  .sidebar-contents__section {
    max-width: $wrapper-small;
    margin-left: 1rem;
  }

  .conclusion-separator {
    margin-bottom: 1.5rem;
    padding: 1rem 0;
    position: relative;

    &::before {
      background-color: $red;
      content: "";
      height: 0.125rem;
      left: 50%;
      position: absolute;
      top: 50%;
      transform: translate(-50%, -50%);
      width: 4rem;
    }
  }
}

.text-container {
  p {
    margin-bottom: 1rem;
  }
}

.footnote {
  font-size: 0.75rem;
}

.footnotes {
  border-top: $border;
  margin: 2rem 0;
  max-width: 40rem;
  padding: 2rem 0;

  .home & {
    margin: 0 auto;
  }

  ol,
  ul {
    list-style: decimal;
  }

  li {
    color: $brown;
    font-family: $font-text;
    margin-left: 1rem;
  }

  p {
    color: $brown;

    @include text(md, "text");

    strong {
      font-weight: $fw-bold;
    }

    em {
      font-style: italic;
    }

    margin-bottom: 1rem;
  }

  ::marker {
    color: $brown;
    @include text(md, "text");
  }
}

img.scalable {
  &.image-left {
    display: inline;
  }
}

div.scalable {
  margin-bottom: 1rem;
  margin-left: auto;
  margin-right: auto;

  &.wrapper-small {
    max-width: $wrapper-small;
  }

  &.wrapper-medium {
    max-width: $wrapper-medium;
  }

  &.wrapper-large {
    max-width: $wrapper-large;
  }
}

.schools {
  margin-bottom: 2rem;

  @include flex-container($justify: flex-start, $align: flex-start);

  li {
    background-color: $beige-light;
    color: $brown;
    font-family: $font-text;
    margin-right: 1rem;
    padding: 0.25rem 0.5rem;

    @include text(md, "text");
  }
}

#back-to-top {
  background-color: $white;
  color: $green;
}

code {
  background-color: $beige-light;
  border: 0.0625rem solid $beige-dark;
  color: $red;
  display: block;
  font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
  font-size: $fs-display-xxs;
  line-height: $lh-display-xxs;
  margin-bottom: 1rem;
  overflow-x: auto;
  overflow-y: hidden;
  padding: 0 1rem;
}

